--- a/app/views/data_explorer/time_series/results/table/_20_metric_headers.html.erb
+++ b/app/views/data_explorer/time_series/results/table/_20_metric_headers.html.erb
@@ -1,12 +1,10 @@
 <tr>
-  <td></td>
-  <% if @composition.groups.size > 1 %><td></td><% end %>
+  <% if @tbl_show_group_1_headers %><td></td><% end %>
+  <% if @tbl_show_group_2_headers %><td></td><% end %>
 
   <% @composition.results.granularity_unique_members.each do |_| %>
     <% @composition.metrics.each do |metric| %>
-      <% colspan = @composition.comparisons.reduce(0) { |sum, c| sum + c.lookback } + 1 %>
-
-      <th <%= html_attributes(colspan: colspan) %>>
+      <th colspan="<%= @tbl_cols_per_granularity_metric %>">
         <%= metric.metric %>
       </th>
     <% end %>
