--- a/app/views/data_explorer/time_series/results/table/_30_comparison_headers.html.erb
+++ b/app/views/data_explorer/time_series/results/table/_30_comparison_headers.html.erb
@@ -1,6 +1,6 @@
 <tr>
-  <td></td>
-  <% if @composition.groups.size > 1 %><td></td><% end %>
+  <% if @tbl_show_group_1_headers %><td></td><% end %>
+  <% if @tbl_show_group_2_headers %><td></td><% end %>
 
   <% @composition.results.granularity_unique_members.each do |_| %>
     <% @composition.metrics.each do |metric| %>
