--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,15 @@
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
 
-    <%# Includes all stylesheet files in app/views/stylesheets %>
+    <%# `:app` comes from propshaft, and is all stylesheets in app/assets/**/*.css %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
+
+    <script src="https://unpkg.com/slim-select@latest/dist/slimselect.min.js"></script>
+    <link href="https://unpkg.com/slim-select@latest/dist/slimselect.css" rel="stylesheet"/>
+
+    <%# This will add a script tag for the importmap generated from %>
+    <%# config/importmap.rb, **and** script tags for each module that is %>
+    <%# pinned in config/importmap.rb %>
     <%= javascript_importmap_tags %>
   </head>
 
