--- a/app/views/data_explorer/_filter_chooser.html.erb
+++ b/app/views/data_explorer/_filter_chooser.html.erb
@@ -19,12 +19,12 @@
       <option value="exclude" <%= html_attributes(selected: "selected") if filter&.operator == :exclude %>>Exclude</option>
     </select>
 
-      <% if Lists.list_for(dim_key, current_user) %>
     <% if ["Token"].include? dimension_def["Type"] %>
+      <% if Lists.list_for(dim_key) %>
         <br>
         <label for="filter.<%= dim_key %>.values">Values:</label>
-        <select class="value <%= "field_with_errors" if filter&.errors&.include?(:values) %>" <%= html_attributes(name: "filter.#{dim_key}.values", id: "filter.#{dim_key}.values") %> multiple>
-          <% Lists.list_for(dim_key, current_user).each do |item| %>
+        <select class="token value <%= "field_with_errors" if filter&.errors&.include?(:values) %>" <%= html_attributes(name: "filter.#{dim_key}.values", id: "filter.#{dim_key}.values") %> multiple>
+          <% Lists.list_for(dim_key).each do |item| %>
             <option <%= html_attributes(value: item[item.keys[0]]) %> <%= html_attributes(selected: "selected") if filter&.values&.include?(item[item.keys[0]].to_s) %>><%= item[item.keys[1]] %></option>
           <% end %>
         </select>
