--- a/app/views/data_explorer/dimensional/results/table/_20_metric_headers.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_20_metric_headers.html.erb
@@ -9,7 +9,7 @@
     <% end %>
   <% end %>
 
-  <% @expand_group_2_members.each do |group_2_member| %>
+  <% @expand_group_2_member_descriptors.each do |_| %>
     <% @composition.metrics.each do |metric| %>
       <th><%= metric.metric %></th>
     <% end %>
