--- a/app/views/data_explorer/time_series/_results.html.erb
+++ b/app/views/data_explorer/time_series/_results.html.erb
@@ -31,11 +31,11 @@
 
   # Create a set of each group's members, plus `nil` to represent values that
   # don't belong to any member of that group (if necessary)
-  @expand_group_1_members = @composition.results.group_1_unique_members || []
-  @expand_group_1_members << nil #if @tbl_show_group_1_unknowns
+  @expand_group_1_member_descriptors = @composition.results.group_1_unique_member_descriptors || []
+  @expand_group_1_member_descriptors << nil #if @tbl_show_group_1_unknowns
 
-  @expand_group_2_members = @composition.results.group_2_unique_members || []
-  @expand_group_2_members << nil #if @tbl_show_group_2_unknowns
+  @expand_group_2_member_descriptors = @composition.results.group_2_unique_member_descriptors || []
+  @expand_group_2_member_descriptors << nil #if @tbl_show_group_2_unknowns
 %>
 
 <table data-data-explorer--results-table-highlight-target="table">
@@ -67,7 +67,7 @@
   <tbody>
     <%= render "data_explorer/time_series/results/table/40_totals_row" %>
 
-    <%= render partial: "data_explorer/time_series/results/table/50_group_row_block", collection: @expand_group_1_members, as: :group_1_member %>
+    <%= render partial: "data_explorer/time_series/results/table/50_group_row_block", collection: @expand_group_1_member_descriptors, as: :group_1_member_descriptor %>
 
     <%#= render "data_explorer/time_series/results/table/60_no_group_row" %>
   </tbody>
