--- a/app/views/data_explorer/dimensional/results/table/_40_group_row.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_40_group_row.html.erb
@@ -2,11 +2,10 @@
   <%# First cell in the row is a header with the group member name %>
   <% if @tbl_show_group_1_headers %>
     <th
-      data-raw-member="<%= group_1_member || "__nil__" %>"
+      data-raw-member="<%= group_1_member_descriptor || "__nil__" %>"
       scope="row">
 
-      <% label = @composition.results.group_member_label(@composition.groups[0], group_1_member) if group_1_member %>
-      <%= label ? Labeler.label(label, @composition.groups[0]) : "UNKNOWN" %>
+      <%= member_label(@composition, @composition.groups[0], group_1_member_descriptor) %>
     </th>
   <% end %>
 
@@ -17,9 +16,9 @@
     <% @composition.metrics.each do |metric| %>
       <%# Don't display a total for this group 1 member if group 2 is not summable for this metric %>
       <% if !@composition.groups[1] || @composition.groups[1]&.summable?(metric) %>
-        <% total = @composition.results.get_total(metric, @composition.groups[0], group_1_member) %>
-        <% min = @composition.results.get_min(metric, @composition.groups[0], group_1_member) || 0 %>
-        <% max = @composition.results.get_max(metric, @composition.groups[0], group_1_member) || 0 %>
+        <% total = @composition.results.get_total(metric, @composition.groups[0], group_1_member_descriptor) %>
+        <% min = @composition.results.get_min(metric, @composition.groups[0], group_1_member_descriptor) || 0 %>
+        <% max = @composition.results.get_max(metric, @composition.groups[0], group_1_member_descriptor) || 0 %>
         <% range = (max||0) - (min||0) %>
 
         <% title = "Min: #{number_with_delimiter(min)}\nMax: #{number_with_delimiter(max)}\nRange: #{number_with_delimiter(range)}" %>
@@ -37,17 +36,17 @@
     <% end %>
   <% end %>
 
-  <% @expand_group_2_members.each do |group_2_member| %>
+  <% @expand_group_2_member_descriptors.each do |group_2_member_descriptor| %>
     <% @composition.metrics.each do |metric| %>
       <%# If this is the nil, and there's no need to show unknowns, skip it %>
-      <% next if !group_2_member && !@tbl_show_group_2_unknowns %>
+      <% next if !group_2_member_descriptor && !@tbl_show_group_2_unknowns %>
 
-      <% value = @composition.results.get_value(metric, group_1_member, group_2_member) %>
+      <% value = @composition.results.get_value(metric, group_1_member_descriptor, group_2_member_descriptor) %>
 
       <td
         data-highlight-metric="<%= metric.metric %>"
-        data-highlight-group-1="<%= group_1_member || "__nil__" %>"
-        data-highlight-group-2="<%= group_2_member || "__nil__" %>"
+        data-highlight-group-1="<%= group_1_member_descriptor || "__nil__" %>"
+        data-highlight-group-2="<%= group_2_member_descriptor || "__nil__" %>"
         data-raw-value="<%= value %>">
 
         <%= number_with_delimiter(value) %>
