--- a/app/views/data_explorer/dimensional/results/table/_20_metric_headers.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_20_metric_headers.html.erb
@@ -5,13 +5,13 @@
 
   <% if @tbl_show_group_1_totals %>
     <% @composition.metrics.each do |metric| %>
-      <th><%= metric.metric %></th>
+      <th scope="col"><%= metric.metric %></th>
     <% end %>
   <% end %>
 
   <% @expand_group_2_member_descriptors.each do |_| %>
     <% @composition.metrics.each do |metric| %>
-      <th><%= metric.metric %></th>
+      <th scope="col"><%= metric.metric %></th>
     <% end %>
   <% end %>
 </tr>
