--- a/app/views/data_explorer/dimensional/results/table/_10_group_headers.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_10_group_headers.html.erb
@@ -1,7 +1,5 @@
 <tr>
-  <% if @tbl_show_group_1_headers %>
-    <td></td>
-  <% end %>
+  <%= tag.td if @tbl_show_group_1_headers %>
 
   <% if @tbl_show_group_1_totals %>
     <th colspan="<%= @composition.metrics.size %>" scope="colgroup">TOTAL</th>
