--- a/app/views/data_explorer/time_series/results/table/_10_granularity_headers.html.erb
+++ b/app/views/data_explorer/time_series/results/table/_10_granularity_headers.html.erb
@@ -1,6 +1,6 @@
 <tr>
-  <% if @tbl_show_group_1_headers %><td></td><% end %>
-  <% if @tbl_show_group_2_headers %><td></td><% end %>
+  <%= tag.td if @tbl_show_group_1_headers %>
+  <%= tag.td if @tbl_show_group_2_headers %>
 
   <%# A cell for each granularity period, spanning all metrics and comparisons %>
   <% @composition.results.granularity_unique_members.each do |member| %>
