--- a/app/views/data_explorer/time_series/results/table/_40_totals_row.html.erb
+++ b/app/views/data_explorer/time_series/results/table/_40_totals_row.html.erb
@@ -1,6 +1,6 @@
 <tr class="totals">
   <% if @tbl_show_group_1_headers %><th scope="row">TOTAL</th><% end %>
-  <% if @tbl_show_group_2_headers %><th></th><% end %>
+  <%= tag.td if @tbl_show_group_2_headers %>
 
   <% @composition.results.granularity_unique_members.each do |granularity_member| %>
     <% @composition.metrics.each do |metric| %>
