--- a/app/queries/big_query/time_series.sql.erb
+++ b/app/queries/big_query/time_series.sql.erb
@@ -138,7 +138,7 @@ downloads_in_range AS (
 
   if rolling?
     selects << "rolling_window_range AS #{granularity_as}_raw"
-    selects << %Q(FORMAT_TIMESTAMP("%Y-%m-%dT%H:%M:%SZ", RANGE_END(rolling_window_range), "UTC") AS #{granularity_as})
+    selects << %Q(FORMAT_TIMESTAMP("%Y-%m-%dT%H:%M:%SZ", RANGE_START(rolling_window_range), "UTC") AS #{granularity_as})
   else
     bq_granularity = case granularity
     when :daily
