--- a/app/views/data_explorer/time_series/results/table/_30_comparison_headers.html.erb
+++ b/app/views/data_explorer/time_series/results/table/_30_comparison_headers.html.erb
@@ -2,19 +2,19 @@
   <%= tag.td if @tbl_show_group_1_headers %>
   <%= tag.td if @tbl_show_group_2_headers %>
 
-  <% @composition.results.granularity_unique_member_descriptors.each do |_| %>
+  <% @composition.results.granularity_unique_member_descriptors.each do |member_descriptor| %>
     <% @composition.metrics.each do |metric| %>
       <% @composition.comparisons.each do |comparison| %>
         <% comparison.lookback.times do |i| %>
           <%# if +comparison.lookback+ is 3, +lookback+ should be -3, -2, %>
           <%# and -1 for the loops. So when i=0, lookback=-3, and i=1 l=-2 %>
-          <% lookback = -(comparison.lookback - i) %>
+          <% rewind = -(comparison.lookback - i) %>
 
-          <th><%= comparison.period %> <%= lookback %></th>
+          <th><%= comparison_label(comparison, member_descriptor, rewind) %></th>
         <% end %>
       <% end %>
 
-      <th><%= @composition.comparisons.first&.period || "Now" %> -0</th>
+      <th><%= granularity_label(@composition, member_descriptor) %></th>
     <% end %>
   <% end %>
 </tr>
